--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -7018,7 +7018,7 @@ input:focus {
   user-select: none;
 }
 .e-thumbnail img {
-  width: var(--e-spacing-56);
+  width: 56px;
   aspect-ratio: 1/1;
   object-fit: cover;
   vertical-align: bottom;
@@ -7033,15 +7033,15 @@ input:focus {
   position: absolute;
   top: calc(var(--offset) / 2 * -1);
   left: calc(var(--offset) / 2 * -1);
-  border-radius: calc(var(--e-spacing-8) + var(--offset) / 2);
-  border: 2px solid var(--e-green);
+  border-radius: calc(8px + var(--offset) / 2);
+  border: 2px solid #29d305;
   box-sizing: border-box;
   opacity: 0;
   transform: scale(0.9);
   transition: 0.15s all ease;
 }
 .e-thumbnail.e-thumbnail---selected::after {
-  border: 2px solid var(--e-black);
+  border: 2px solid #000;
   opacity: 1;
   transform: scale(1);
 }
