Table bug fix (#890)

--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -6458,6 +6458,7 @@ input:focus {
 .e-table tbody tr:nth-of-type(odd) td {
   background: #f4f4f4;
 }
+.e-table.e-table--no-stripes tbody tr,
 .e-table.e-table--no-stripes tbody tr:nth-of-type(odd) th,
 .e-table.e-table--no-stripes tbody tr:nth-of-type(odd) td {
   background: #fff;
