add dependentStyleSheet to component build, prop function type to wrapper, more props to datepicker range

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -9,6 +9,8 @@
       <h4>Datepicker range</h4>
       <elvia-datepicker-range
         (valueOnChange)="logValue('datepicker range', $event.detail.value)"
+        [disableDates]="datepickerRangeDisableDates"
+        [isFullWidth]="true"
       ></elvia-datepicker-range>
     </div>
     <!--Inverted version-->
