--- a/packages/components/components/elvis-datepicker/src/react/style.scss
+++ b/packages/components/components/elvis-datepicker/src/react/style.scss
@@ -497,18 +497,19 @@ $datepicker-max-width: 448px;
       z-index: 1;
       cursor: pointer;
 
+      // Transparent before-element on all dates to help with targeting the correct date.
       &::before {
         content: '';
         position: absolute;
         z-index: -2;
         height: 30px;
         width: 43px;
-        transform: translate(-2px, 0);
+        transform: translateX(-2px);
         background-color: transparent;
         border-radius: 0;
       }
 
-      // Before-elements are used to add grey background to date range
+      // Before-elements are used to add grey background to date range.
       &.ewc-datepicker__day-in-range {
         &::before {
           background-color: $grey-05;
@@ -516,43 +517,43 @@ $datepicker-max-width: 448px;
         &.ewc-datepicker__day-start-of-week::before,
         &.ewc-datepicker__day-start-of-month::before {
           width: 36px;
-          transform: translate(2px, 0);
+          transform: translateX(2px);
           border-top-left-radius: 4px;
           border-bottom-left-radius: 4px;
         }
         &.ewc-datepicker__day-end-of-week::before,
         &.ewc-datepicker__day-end-of-month::before {
           width: 36px;
-          transform: translate(-2.5px, 0);
+          transform: translateX(-3px);
           border-top-right-radius: 4px;
           border-bottom-right-radius: 4px;
         }
         &.ewc-datepicker__day-first-in-range.ewc-datepicker__day-end-of-week::before {
           width: 30px;
-          transform: translate(0, 0);
+          transform: translateX(0);
           border-top-left-radius: 50%;
           border-bottom-left-radius: 50%;
         }
         &.ewc-datepicker__day-first-in-range::before {
           width: 36px;
-          transform: translate(3px, 0);
+          transform: translateX(3px);
           border-top-left-radius: 50%;
           border-bottom-left-radius: 50%;
         }
         &.ewc-datepicker__day-last-in-range.ewc-datepicker__day-start-of-week::before {
           width: 31px;
-          transform: translate(-1px, 0);
+          transform: translateX(-1px);
           border-top-right-radius: 50%;
           border-bottom-right-radius: 50%;
         }
         &.ewc-datepicker__day-last-in-range::before {
           width: 36px;
-          transform: translate(-3px, 0);
+          transform: translateX(-3px);
           border-top-right-radius: 50%;
           border-bottom-right-radius: 50%;
         }
         &.ewc-datepicker__day-first-in-range.ewc-datepicker__day-last-in-range::before {
-          transform: translate(0, 0);
+          transform: translateX(0);
           width: 30px;
           height: 30px;
           border-radius: 50%;
